--- a/tictactoe-game/tictactoe.html
+++ b/tictactoe-game/tictactoe.html
@@ -40,7 +40,7 @@
   <button onclick="resetToDefault()">Reset</button>
   
   <div align="center" id="popup">
-  <p id="text">text</p>
+  <p id="text">win/lose</p>
   <button id="popupbutton" onclick="resetToDefault()">Ok</button>
   </div>
   
