made by riya pal

--- a/tictactoe-game/tictactoe.html
+++ b/tictactoe-game/tictactoe.html
@@ -14,10 +14,9 @@
   <header>
   <h1>TIC TAC TOE</h1>
   </header>
+  <p>&copy; palriya292</p>
   <br />
-  <br />
-  <br />
-  <br />
+  
   
   <table align="center">
   <tr>
@@ -45,6 +44,7 @@
   </div>
   
   <div id="overlay"></div>
+<p>*In Tie condition page will remain static without displaying any winner. To start a new game press RESET.</p>
   
   </body>
 </html>
